# Project-Odin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  winget.yml
docs/: architecture.md  features.md  github.md  odin-platform-spec.md  odin-platform-tasks.md  release.md  usage.md
examples/: odin.yaml
examples/profiles/: backend-dev.yaml  study-mode.yaml
scoop/: odin.json
scripts/: bootstrap.ps1  install.ps1  uninstall.ps1
src/: cli.rs  main.rs
src/asgard/: mod.rs  profile.rs  state.rs  store.rs
src/commands/: activate.rs  all_eye.rs  archive.rs  batmode.rs  config.rs  current.rs  dashboard.rs  deactivate.rs  diff.rs  doctor.rs  export.rs  freeport.rs  history.rs  init.rs  kill.rs  login.rs  logout.rs  mod.rs  net.rs  plugin.rs  ports.rs  profile.rs  ps.rs  push.rs  restore.rs  rollback.rs  schedule.rs  snapshot.rs  sync.rs  update.rs  watch.rs
src/core/: context.rs  errors.rs
src/integrations/: archive.rs  git_cli.rs  github.rs  install.rs  launcher.rs  mod.rs  package_managers.rs  platform.rs  plugin_loader.rs  powershell.rs  process.rs  start_apps.rs  toolchains.rs  vscode.rs  window_manager.rs  windows.rs
src/models/: batmode.rs  config.rs  diff.rs  doctor.rs  environment.rs  git.rs  history.rs  machine.rs  mod.rs  net.rs  package.rs  plugin.rs  process.rs  restore.rs  snapshot.rs  vscode.rs  watcher.rs
src/services/: archive_service.rs  asgard_service.rs  batmode_service.rs  config_service.rs  diff_service.rs  doctor_service.rs  export_service.rs  history_service.rs  manager_bootstrap.rs  mod.rs  net_service.rs  platform_service.rs  plugin_service.rs  process_service.rs  redact.rs  restore_service.rs  schedule_service.rs  secret_service.rs  snapshot_service.rs  storage.rs  sync_service.rs  update_service.rs  watcher_service.rs
src/ui/: all_eye.rs  asgard.rs  dashboard.rs  mod.rs  process_dashboard.rs  restore_view.rs  text_tables.rs  theme.rs
src/utils/: banner.rs  checksum.rs  fs.rs  logging.rs  mod.rs  paths.rs  terminal.rs  time.rs
tests/: cli.rs
winget/: README.md
winget/manifests/a/AsimAftab/Odin/0.1.1/: AsimAftab.Odin.installer.yaml  AsimAftab.Odin.locale.en-US.yaml  AsimAftab.Odin.yaml
winget/manifests/a/AsimAftab/Odin/0.2.0/: AsimAftab.Odin.installer.yaml
