[package]
name = "odin"
version = "0.13.0"
edition = "2021"
rust-version = "1.88"
authors = ["Odin contributors"]
description = "Windows developer workstation snapshot, restore, sync, and diagnostics CLI"
license = "MIT"
repository = "https://github.com/AsimAftab/Project-Odin"
readme = "README.md"
keywords = ["windows", "developer-tools", "backup", "restore", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
comfy-table = "7"
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "5.0"
flate2 = "1.0"
indicatif = "0.18"
keyring = { version = "3.6", features = ["windows-native"] }
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.30"
tar = "0.4"
thiserror = "1.0"
toml = "1.1"
tokio = { version = "1.40", features = ["macros", "process", "rt-multi-thread", "fs", "io-util", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
which = "6.0"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.12"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"
